Communicate rsync pull failure reason more clearly, by outputting all output to the command line and mapping exit codes to error messages appropriate for the client.